# job-radar

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py  tasks.py
app/api/: endpoints.py
app/core/: celery_app.py  config.py  db.py
app/models/: job.py
app/schemas/: remotive.py
app/services/: ingestion.py
tests/: conftest.py  test_api.py  test_ingestion.py
ui/: package-lock.json
ui/app/: layout.tsx  page.tsx
